fixed unnecessary white space below ABOUT section

--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@
 
 /*Removes whitespace from the sides of the header and navigation elements*/
 html, body {
-    height: 100%;
+    height: 80.5%;
     margin: 0;
     padding: 0;
 }
